# libVNF

./: .gitignore  CMakeLists.txt  README.md
dependencies/kernel_bypass_stack/: README.md
examples/: .gitignore  README.md
examples/IMS/: .gitignore  README.md
examples/IMS/hss/: Makefile  hss.cpp  hss.h  security.h  sip.cpp
examples/IMS/icscf/: Makefile  icscf.cpp  icscf.h  uecontext.h  utils.cpp
examples/IMS/pcscf/: Makefile  common.h  pcscf.cpp  pcscf.h  uecontext.cpp  uecontext.h
examples/IMS/ran/: Makefile  network.cpp  network.h  packet.cpp  packet.h  ran.cpp  ran.h  ran_simulator.cpp  ran_simulator.h  sctp_client.cpp  sctp_client.h  security.cpp  telecom.cpp  telecom.h  uecontext.h  utils.cpp  utils.h
examples/IMS/scscf/: Makefile  README.md  packet.cpp  packet.h  scscf.cpp  scscf.h  sip.h  utils.h
examples/LB/: README.md  load_balancer.cpp  run.sh
examples/LB/backend_kernel_module/: Makefile  README.md  lb_module.c  modules.order
examples/abc/: README.md
examples/abc/layman/: Makefile  b.cpp  simulation_parameters.sh
examples/abc/local/: .gitignore  Makefile  README.md  a.cpp  b.cpp  c.cpp  libconfig.json  vnfconfig.json
examples/abc/remote/: .gitignore  Makefile  README.md  a.cpp  a.hpp  b.cpp  b.hpp  c.cpp  libconfig.json  server.conf  vnfconfig.json
examples/abc/scmr/: a.cpp  b.cpp
examples/epc/: README.md
examples/epc/hss/: defport.h  mysql.cpp
examples/epc/mme/: Makefile  common.h  defport.h  diameter.h  gtp.h  mme.cpp  mme.h  network.h  packet.h  s1ap.h  security.h  server.conf  sync.h  telecom.h
examples/epc/pgw/: common.h  kby_mme.cpp  kby_mme.h  kby_pgw.h  kby_sgw.cpp  kby_sgw.h  server.conf
examples/epc/pgw/include-epc/: kby_mme.cpp  templates.cpp
examples/epc/pgw/kernel/: kby_mme.h  mysql.cpp  ran.cpp  xmme.sh
examples/epc/ran/: Makefile  README.txt  common.h  defport.h  kby_mme.h  kby_pgw.cpp
examples/epc/ran/include-epc/: compile.sh  kbmme.sublime-workspace  kby_sgw.cpp  ran_simulator.cpp  server.conf
examples/epc/ran/kernel/: Readme.txt  compileold.sh  kb_mme.cpp  ran.cpp  ran_simulator.cpp  xsgw.sh
examples/epc/sgw/: Makefile  defport.h  kby_sgw.cpp  server.conf
examples/epc/sgw/include-epc/: server.conf
examples/epc/sgw/kernel/: defport.h  hss.cpp  kb_mme.h  kby_sgw.h  makefile  ran_simulator.cpp  xpgw.sh
include/: core.hpp
src/datastore/: dspackethandler.cpp  utils.cpp
src/kernel/: core.cpp  utils.hpp
src/kernel_bypass/: core.cpp  utils.hpp
src/kernel_bypass_impl/: core.cpp
src/kernel_impl/: core.cpp
src/kernel_l3/: core.cpp
src/kernel_l3_impl/: core.cpp
